--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen">
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
   <script type="text/javascript" src="../vendor/md5.js"></script>
-  <script type="text/javascript" src="../lfm.js"></script>
+  <script type="text/javascript" src="../lfmjs/lfm.js"></script>
   <script type="text/javascript" src="lfm-test.js"></script>
 </head>
 <body>
