--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
   <title>QUnit Test Suite</title>
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen">
   <script type="text/javascript" src="../vendor/qunit/qunit.js"></script>
-  <script type="text/javascript" src="../vendor/md5.js"></script>
+  <script type="text/javascript" src="../vendor/crypto/2.3.0-crypto-md5.js"></script>
   <script type="text/javascript" src="../src/lfm.js"></script>
   <script type="text/javascript" src="lfm-test.js"></script>
 </head>
